[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Autoclickers.gd" type="Script" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Clicker" type="Button" parent="."]
margin_left = 446.0
margin_top = 59.0
margin_right = 594.0
margin_bottom = 91.0
rect_rotation = 360.031
text = "make something"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyCounter" type="HBoxContainer" parent="."]
margin_left = 473.0
margin_top = 11.0
margin_right = 544.0
margin_bottom = 51.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MoneyCounter"]
margin_top = 13.0
margin_right = 64.0
margin_bottom = 27.0
text = "Science : "
uppercase = true

[node name="Counter" type="Label" parent="MoneyCounter"]
margin_left = 68.0
margin_top = 13.0
margin_right = 76.0
margin_bottom = 27.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Autoclickers" type="HBoxContainer" parent="."]
margin_left = 34.0
margin_top = 138.0
margin_right = 146.0
margin_bottom = 178.0
grow_vertical = 0
custom_constants/separation = 21
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="b_Achat" type="Button" parent="Autoclickers"]
margin_right = 94.0
margin_bottom = 40.0
text = "Auto clicking"

[node name="b_Upgrade" type="Button" parent="Autoclickers"]
margin_left = 115.0
margin_right = 180.0
margin_bottom = 40.0
text = "Upgrade"

[node name="Label" type="Label" parent="Autoclickers"]
margin_left = 201.0
margin_top = 13.0
margin_right = 247.0
margin_bottom = 27.0
text = "Level : "

[node name="l_niveau" type="Label" parent="Autoclickers"]
margin_left = 268.0
margin_top = 13.0
margin_right = 276.0
margin_bottom = 27.0
text = "0"

[node name="l_Value" type="Label" parent="Autoclickers"]
margin_left = 297.0
margin_top = 13.0
margin_right = 305.0
margin_bottom = 27.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="HBoxContainer" parent="."]
margin_left = 17.0
margin_top = 12.0
margin_right = 60.0
margin_bottom = 52.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Time"]
margin_top = 13.0
margin_right = 31.0
margin_bottom = 27.0
text = "time"
uppercase = true

[node name="Counter" type="Label" parent="Time"]
margin_left = 35.0
margin_top = 13.0
margin_right = 43.0
margin_bottom = 27.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Clicker" to="." method="_on_Clicker_pressed"]
[connection signal="pressed" from="Clicker" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Autoclickers/b_Achat" to="Autoclickers" method="_on_b_Achat_pressed"]
[connection signal="pressed" from="Autoclickers/b_Upgrade" to="Autoclickers" method="_on_b_Upgrade_pressed"]
